--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,19 @@ version: "3.7"
 name: bjj-graph
 
 services:
-  # app:
-  #   container_name: bjj-graph_app
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   restart: unless-stopped
-  #   env_file:
-  #     - .env
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
-  #   volumes:
-  #     - .:/code
-  #     - node_modules:/code/node_modules/
-  #   ports:
-  #     - "${APP_PORT:-5173}:5137"
+  app:
+    container_name: bjj-graph_app
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./app:/code
   db:
     container_name: bjj-graph_db
     image: neo4j:5.9.0
@@ -40,5 +37,3 @@ services:
 volumes:
   dbdata:
     driver: local
-  # node_modules:
-  #   driver: local
